playground/notas_tests/invalid/func-01.hulk
let x = 1 in function f() => x + 1 in f();
